Added missing classes

--- a/keycloak/dissco-theme/login/theme.properties
+++ b/keycloak/dissco-theme/login/theme.properties
@@ -52,3 +52,17 @@ kcLogoIdP-twitter=
 kcLogoIdP-openshift-v4=
 
 kcFormClass=pf-v5-c-form pf-v5-u-w-100
+kcFormOptionsClass=col-xs-12 col-sm-12 col-md-12 col-lg-12
+kcFormButtonsClass=col-xs-12 col-sm-12 col-md-12 col-lg-12
+kcButtonPrimaryClass=pf-m-primary
+kcButtonBlockClass=pf-m-block
+kcButtonLargeClass=btn-lg
+kcFormGroupClass=form-group
+kcFormGroupHeader=pf-c-form__group
+kcLabelWrapperClass=col-xs-12 col-sm-12 col-md-12 col-lg-12
+kcLabelClass=pf-c-form__label pf-c-form__label-text
+kcInputWrapperClass=col-xs-12 col-sm-12 col-md-12 col-lg-12
+kcInputHelperTextBeforeClass=pf-c-form__helper-text pf-c-form__helper-text-before
+kcInputErrorMessageClass=pf-c-form__helper-text pf-m-error required kc-feedback-text
+kcInputHelperTextAfterClass=pf-c-form__helper-text pf-c-form__helper-text-after
+kcInputClass=pf-c-form-control
