Test to see which base theme we pick up

--- a/keycloak/dissco-theme/login/theme.properties
+++ b/keycloak/dissco-theme/login/theme.properties
@@ -1,5 +1,5 @@
-parent=base
-import=common/keycloak
+# parent=base
+# import=common/keycloak
 
 styles=css/styles.css
 stylesCommon=vendor/patternfly-v5/patternfly.min.css vendor/patternfly-v5/patternfly-addons.css
