--- a/keycloak/dissco-theme/login/theme.properties
+++ b/keycloak/dissco-theme/login/theme.properties
@@ -1,3 +1,5 @@
+parent=base
+
 styles=css/styles.css
 stylesCommon=vendor/patternfly-v5/patternfly.min.css vendor/patternfly-v5/patternfly-addons.css
 
